# aq-fcst

./: .gitignore  Cargo.toml  README.md
examples/input/: input_example.csv
examples/output/: apm25_hr01_bc_output_example.csv  apm25_hr01_bc_output_example_processed.csv
src/: lib.rs  main.rs
