[package]
name = "aq-fcst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
chrono-tz = "0.8.4"
clap = { version = "4.4.7", features = ["derive"] }
csv = "1.3.0"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
regex = "1.10.2"
polars = { version = "0.34.2", features = ["lazy"] }
humantime = "2.1.0"
